Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49832

Windows restoreDockWidget restores widget with wrong position

XMLWordPrintable

    • bece6fa0b9409918ce9c57c59d61537b304c9812 (qtbase/5.6, 15.12.2015, 5.6)

      The user wants to use docked widgets in her application. The user also wants to be able to restore docked widget after it was closed (her interest lies in geometry of the widget). However, the position of the widget will be increased all the time by the difference between frameGeometry() and geometry().

      The frame geometry of the restored docked widget must be the same as the frame geometry of this widget before closing (expected result).

      What actually happens:

      The restored widget frame geometry (position part: x and y values) is equal to the geometry (not a frame geometry) of this widget before closing:

      In main: Geometry  QRect(910,505 200x100)  Frame geometry  QRect(902,479 216x134) QPoint(902,479)
      In restore: Geometry  QRect(918,531 200x100)  Frame geometry  QRect(910,505 216x134) QPoint(910,505)
      

      You can reproduce this issue with the application attached on Windows 7 using MSVC2013 in VS 2013.

      Steps to reproduce:
      1. Download and unpack the demo
      2. Run it
      3. Close docked widget
      4. Press "Tab" button to restore it
      5. See logs in Output window

        1. qtbug49832.zip
          2 kB
          Friedemann Kleint
        2. qtbug49832_win_log.txt
          4 kB
          Friedemann Kleint
        3. qtbug49832_xcb_log.txt
          4 kB
          Friedemann Kleint
        4. qtbug49832_diag.diff
          3 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-49832
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            dmnikola Dmitry Nikolaev
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes